Migrate unit tests from JUnit 4 to JUnit 5(Jupiter) (#6710)
Signed-off-by: lance <leehaut@gmail.com>